# igrep

./: .gitignore  Cargo.toml  README.md  build.rs  components.d.ts  env_my.fish  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  webpack.config.js
igrep_web/: index.html  package-lock.json  package.json
igrep_web/src/router/: index.ts
rust-api/: data.rs  index.rs  lib.rs  main.rs  range.rs  search.rs
rust-api/clang/: clangd_lsp_client.rs  lsp_server_wraper.rs  mod.rs
rust-api/copy_to_sha256/: main.rs
rust-api/lsp/: builder.rs  clangd_client.rs  data.rs  index.rs  mod.rs  path.rs
rust-api/ngram/: builder.rs  data.rs  index.rs  path.rs  search.rs
rust-api/web_api/: Cargo.toml  data.rs  index.rs  mod.rs  path.rs  search.rs
rust-api/web_api/lsp/: data.rs  index.rs  mod.rs  path.rs
rust-api/web_api/ngram/: index.rs  search.rs
rustApi/: builder.rs  config.rs  data.rs  lib.rs  search.rs
rustApi/clang/: mod.rs
rustApi/lsp/: clangd_client.rs.bak  clangd_client_new.rs
rustApi/ngram/: builder.rs  index.rs
src/: builder.rs  clangd_lsp_client.rs  config.rs  data.rs  encode.rs  index.rs  index_builder.rs  index_file.rs  index_regex.rs  lib.rs  main.rs  range.rs  search.rs
src/clang/: clangd_lsp_client.rs  compilation_database.rs  index.rs  json.rs  mod.rs  utility.rs
src/lsp/: clangd_client.rs  mod.rs
src/ngram/: builder.rs  data.rs  index.rs  mod.rs  path.rs  search.rs
src/views/: SearchView.vue
test/: file
v86-image-build/alpine/: Dockerfile  build-state.js  build-state.ts  build.sh  build_lsp.sh  build_os.sh
v86-image-build/alpine_4g/: .gitignore  Dockerfile  build-state.ts  build_kernel.sh  build_lsp.sh  build_os.sh  build_os_abuild.sh
v86-image-build/alpine_4g/kernel/: Dockerfile  build_os.sh
v86-image-build/debian/: .gitignore  Dockerfile  build_os.sh
vue-project/: index.html  package-lock.json  vite.config.ts
vue-project/src/: App.vue
vue-project/src/components/: Search.vue
web/: .gitignore  index.html  package-lock.json  package.json  search.js  vite.config.ts
web-src/: App.vue
web-src/assets/: main.css
web-src/components/: MonacoView.vue
web-src/components/lsp/: DirTree.vue  FilePathBar.vue  OneFile.vue  definitionProvider.ts  file.ts  hoverProvider.ts  referenceProvider.ts  semanticHighlighter.ts  semanticTokens.css
web-src/components/search/: CodeViewLines.vue  CodeViewOneLine.vue  FileResult.vue  SearchBox.vue
web-src/router/: index.ts
web-src/utils/: clang_lsp.ts  lsp_client.ts  utils.ts
web-src/views/: FileView.vue  FilesView.vue  HomeView.vue  SearchView.vue  VMView.vue
web/src/: App.vue  main.ts
web/src/index/: File.vue  (+1 more)
web_old/: index.html  my-component.js
web_old/web/: tsconfig.json  vite.config.ts
(+10 files in other folders)
