[package]
name = "igrep"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
flate2 = { version = "1.0.17", features = ["zlib-rs"], default-features = false }
anyhow = "1.0.98"
bincode = "2.0.1"
clap = { version = "4.5.40", features = ["derive"] }
js-sys = "0.3.77"
regex = "1.11.1"
regex-syntax = "0.8.5"
wasm-bindgen = "0.2.100"
