[package]
name = "igrep"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "igrep"
path = "rust-api/main.rs"

[dependencies]
flate2 = { version = "1.0.17", features = [
    "zlib-rs",
], default-features = false }
anyhow = "1.0.98"
bincode = "2.0.1"
clap = { version = "4.5.42", features = ["derive"] }
js-sys = "0.3.77"
regex = "1.11.1"
regex-syntax = "0.8.5"
wasm-bindgen = "0.2.100"
rayon = "1.10.0"
colored = "3.0.0"
# clang = { version = "2.0.0", features = ["clang_10_0"] }
# clang-sys = { version = "1.8.1", features = ["clang_18_0"] }
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
lsp-types = "0.97.0"
# jsonrpsee = { version = "0.25.1", features = ["client", "http-client"] }
# tokio = { version = "1.34.0", default-features = false }
futures = "0.3.30"
log = "0.4.29"
env_logger = "0.11.9"
postcard = { version = "1.1.3", features = ["use-std"] }
tokio = { version = "1.51", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "process",
    "io-util",
] }
indicatif = "0.17.11"
