[package]
name = "igrep"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "../lib.rs"

[dependencies]
flate2 = { version = "1.0.17", features = [
    "zlib-rs",
], default-features = false }
anyhow = "1.0.98"
bincode = "2.0.1"
clap = { version = "4.5.42", features = ["derive"] }
js-sys = "0.3.77"
regex = "1.11.1"
regex-syntax = "0.8.5"
wasm-bindgen = "0.2.100"
rayon = "1.10.0"
colored = "3.0.0"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
lsp-types = "0.97.0"
futures = "0.3.30"
log = "0.4.29"
env_logger = "0.11.9"
postcard = { version = "1.1.3", features = ["use-std"] }
